new_tests/semantics/scope/bad/012_NE2.cm

class A {
    protected x:Int 
    public method print() => Void {
        parent.x 
    }
}
